update little change

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <span id="JYspan" data-letter="Y">J</span>
         </div>
         <ul class="">
-          <li><a class="list-item" href="">About Me</a></li>
-          <li><a class="list-item" href="">My Skills</a></li>
+          <li><a class="list-item" href="#aboutMe">About Me</a></li>
+          <li><a class="list-item" href="#skill">My Skills</a></li>
           <li><a class="list-item" href="">Jobs</a></li>
           <li><a class="list-item" href="">Contact</a></li>
           <li><a class="list-item" href="">Blog</a></li>
@@ -104,7 +104,7 @@
                       height="900"
                     >
                       <image
-                        href="images/picW.JPG"
+                        href="mages/picW.JPG"
                         y="100"
                         x="160"
                         width="700"
@@ -145,10 +145,10 @@
               </div>
             </div>
           </div>
-          <div class="skills relative">
+          <div id="skill" class="skills relative">
+            <h1>Skills & experience</h1>
+            <h2></h2>
             <div class="text-fond">Skills</div>
-            <h1>Skills &</h1>
-            <h2>experience</h2>
             <div class="row">
               <div class="col l6 s12 relative">
                 <ul>
@@ -178,6 +178,101 @@
                         elit. Sed et ipsum excepturi nostrum tempore facere ipsa
                         quaerat maxime quam officiis?
                       </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div id="experience" class="experience relative">
+              <div class="text-fond">Experince</div>
+              <div class="row">
+                <div class="col s12 l6">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-title black-text">
+                        <i class="material-icons yellow darken-4">person</i>
+
+                        #Hackathon Devfest 5éme édition
+                      </div>
+                      <p class="black-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Enim illo repellat nobis, molestias quo quos,
+                        veritatis recusandae laborum impedit necessitatibus
+                        libero nostrum neque expedita, incidunt natus ea sint
+                        quis numquam.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 l6">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-title black-text">
+                        <i class="material-icons yellow darken-4">person</i>
+
+                        Stem For Good
+                      </div>
+                      <p class="black-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Enim illo repellat nobis, molestias quo quos,
+                        veritatis recusandae laborum impedit necessitatibus
+                        libero nostrum neque expedita, incidunt natus ea sint
+                        quis numquam.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 l6">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-title black-text">
+                        <i class="material-icons yellow darken-4">person</i>
+
+                        Upskills
+                      </div>
+                      <p class="black-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Enim illo repellat nobis, molestias quo quos,
+                        veritatis recusandae laborum impedit necessitatibus
+                        libero nostrum neque expedita, incidunt natus ea sint
+                        quis numquam.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 l6">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-title black-text">
+                        <i class="material-icons yellow darken-4">person</i>
+
+                        Poesam Orange Digitale Center
+                      </div>
+                      <p class="black-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Enim illo repellat nobis, molestias quo quos,
+                        veritatis recusandae laborum impedit necessitatibus
+                        libero nostrum neque expedita, incidunt natus ea sint
+                        quis numquam.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 l6">
+                  <div class="card">
+                    <div class="card-content">
+                      <div class="card-title black-text">
+                        <i class="material-icons yellow darken-4">person</i>
+
+                        #Hackathon frontend "AWARD"
+                      </div>
+                      <p class="black-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Enim illo repellat nobis, molestias quo quos,
+                        veritatis recusandae laborum impedit necessitatibus
+                        libero nostrum neque expedita, incidunt natus ea sint
+                        quis numquam.
+                      </p>
                     </div>
                   </div>
                 </div>
