--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <script
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap'); </style>
+        <script
       src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"
       integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ=="
       crossorigin="anonymous"
@@ -38,7 +40,7 @@
         <ul class="">
           <li><a class="list-item" href="#aboutMe">About Me</a></li>
           <li><a class="list-item" href="#skill">My Skills</a></li>
-          <li><a class="list-item" href="">Jobs</a></li>
+          <li><a class="list-item" href="#jobs">Jobs</a></li>
           <li><a class="list-item" href="">Contact</a></li>
           <li><a class="list-item" href="">Blog</a></li>
         </ul>
@@ -276,6 +278,22 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+          <div id="jobs" class="jobs">
+            <h1>Jobs</h1>
+            <div class="text-fond right">Jobs</div>
+            <div class="row">
+              <div class="col l6 s12">
+                <a class="jobsA" href="https://www.formations.mg/">
+                  <img src="images/formation.JPG" alt="" />
+                </a>
+              </div>
+              <div class="col l6 s12">
+                <a class="jobsA" href="https://id.stem4good.org/">
+                  <img src="images/stem4good.JPG" alt="" />
+                </a>
               </div>
             </div>
           </div>
