--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                       height="900"
                     >
                       <image
-                        href="mages/picW.JPG"
+                        href="images/picW.JPG"
                         y="100"
                         x="160"
                         width="700"
